styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Skranji&family=Roboto+Condensed&display=swap');

#content {
  max-width: 1600px;
  margin: 0 auto;
}
nav a {
  padding: 35px;
  text-align: center;
}
#hero-msg h1, #hero-msg h4 {
  text-align: center;
}
.button-box {
  text-align: center;
}
main section {
  text-align: center;
}
#background {
  height: 725px;
}
#hero-img {
  width: 100%;
}
body {
  background-color: white;
  font-family: 'Roboto Condensed', Helvetica, sans-serif;
  font-size: 22px;
  margin: 0;
  padding: 0;
}
header {
  background-color: #9e9747;
  font-family: 'Skranji', Helvetica, sans-serif;
  display: grid;
  grid-template-columns: 150px auto;
}
nav a:hover {
  background-color: #5B5729;
  font-family: 'Skranji', Helvetica, sans-serif;
}
.book:hover, .join:hover {
  background-color: #5B5729;
  color: white;
}
#background {
  background-color: lightgrey;
}
.msg {
}
footer {
  padding: 25px 50px;
  color: white;
  margin-top: 200px;
  background-color: #5B5729;
  display: flex;
  justify-content: space-around;
  align-items: center;
}
nav a {
  color: white;
  text-align: center;
  text-decoration: none;
}
.home-title {
  margin-top: 10px;
  font-size: 2em;
  color: white;
}
h4 {
  color: white;
}
.book, .join {
  border-radius: 5px;
  margin-top: 50px;
  padding: 15px 30px;
  color: white;
  font-size: 18px;
  background-color: #9e9747;
  text-align: center;
  text-decoration: none;
}
.book:hover, .join:hover {
  color: gray;
}
.msg h2 {
  color: white;
  font-family: 'Skranji', Helvetica, sans-serif;
}
.msg p {
  padding-bottom: 15px;
  color: white;
  font-size: .8em;
}
footer a {
  color: white;
  text-align: center;
  text-decoration: none;
}
footer a:hover {
  color: gray;
}
.icon, .logo {
  width: 80px;
}
footer p {
  font-size: 1.2em;
}
footer p a:hover {
  text-decoration: underline;
}
h2 {
  margin: 0;
}
#logo_link {
  justify-self: center;
  align-self: center;
  padding-top: 5px;
}
.icon {
  padding-top: 10px;
}
footer .social img {
  padding-top: 15px;
}
.rivers-card, .camping-card, .rapids-card {
  margin: 200px 0;
}
.card-img {
  border: 10px solid black;
  transition: transform .5s;
  box-shadow: 5px 5px 10px #6f7364;
}
main section img {
  box-sizing: border-box;
}
nav {
  display: flex;
  justify-content: space-around;
}
#hero {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  margin-top: -100px;
}
#hero-box {
  grid-column: 1/4;
  grid-row: 1/3;
  z-index: -1;
}
#hero-msg {
  grid-column: 2/3;
  grid-row: 1/2;
  margin-top: 100px;
}
.home-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  width: 100%;
  justify-content: center;
}
.rivers-card {
  grid-column: 2/4;
  grid-row: 2/3;
}
.camping-card {
  grid-column: 5/7;
  grid-row: 2/3;
}
.rapids-card {
  grid-column: 8/10;
  grid-row: 2/3;
}
#background {
  grid-column: 1/11;
  grid-row: 4/9;
}
.mountains {
  box-shadow: 5px 5px 10px #6f7364;
  width: 100%;
  grid-column: 2/7;
  grid-row: 5/8;
}
.msg {
  grid-column: 6/10;
  grid-row: 6/7;
  padding: 35px;
  background-color: #5B5729;
  box-shadow: 5px 5px 10px #5B5729;
}
.card-img, .mountains {
  width: 100%;
}
.home-grid h2 {
  color: white;
}
.card-img:hover {
  opacity: .6;
  transform: scale(1.1);
}

@media screen and (max-width: 900px) {
  #hero, .home-grid {
    display: block;
    height: auto;
  }
  nav, footer {
    flex-direction: column;
  }
  nav a {
    display: block;
    padding: 15px;
  }
  #hero {
    margin-top: 0;
  }
  #hero-msg {
    margin-top: 0;
  }
  #hero-msg h4 {
    display: none;
  }
  #hero-msg h1 {
    color: #6f7364;
  }
  .home-title {
    font-size: 25px;
  }
  .rivers-card, .camping-card, .rapids-card { 
    margin: 50px auto;
    width: 60%;
  }
  #background {
    display: none;
  }
  .mountains, .msg {
    width: 80%;
    display: block;
    margin: 0 auto;
  }
  footer {
    margin-top: 25px;
  }
}

